[gd_scene load_steps=32 format=3 uid="uid://dhtypwovh50vr"]

[ext_resource type="Script" path="res://Scenes/Llama/llama.gd" id="1_7h8ci"]
[ext_resource type="Script" path="res://Scripts/States/state_machine.gd" id="1_mb2rl"]
[ext_resource type="Script" path="res://Scenes/Llama/llama_idle.gd" id="2_wgeyf"]
[ext_resource type="Script" path="res://Scenes/Llama/llama_wander.gd" id="3_evbmu"]
[ext_resource type="Script" path="res://Scenes/Llama/llama_flee.gd" id="4_mqi7g"]
[ext_resource type="Script" path="res://Scenes/Llama/llama_caught.gd" id="5_fcvlx"]
[ext_resource type="Script" path="res://Scenes/Llama/llama_flung.gd" id="6_16n04"]
[ext_resource type="Script" path="res://Scenes/Llama/llama_penned.gd" id="7_luyet"]
[ext_resource type="Script" path="res://Scenes/Llama/exit_pen.gd" id="9_85bgn"]
[ext_resource type="Script" path="res://Scenes/Llama/dazed.gd" id="10_253va"]
[ext_resource type="Texture2D" uid="uid://xdmt0etye5xy" path="res://Art/Llama Spritesheet.png" id="10_gq3d1"]
[ext_resource type="PackedScene" uid="uid://xa534cvtars8" path="res://Scenes/UI/llama_progress_bar.tscn" id="11_v1w6j"]
[ext_resource type="AudioStream" uid="uid://c53qth3hl1ela" path="res://Audio/Llama Spit.wav" id="12_i5jn6"]
[ext_resource type="AudioStream" uid="uid://b558vt5olaulk" path="res://Audio/Llama sound 1 (being grabbed maybe).wav" id="13_an616"]
[ext_resource type="AudioStream" uid="uid://gl8h5svglvxk" path="res://Audio/Llama Sound 4.wav" id="14_k0qkl"]
[ext_resource type="AudioStream" uid="uid://btrx4x1e40srj" path="res://Audio/Llama Sound 3.wav" id="15_yvmof"]
[ext_resource type="AudioStream" uid="uid://de5ai1w0vn6ae" path="res://Audio/Llama sound 2.mp3" id="16_aeujn"]
[ext_resource type="Texture2D" uid="uid://1yiew2unkk8h" path="res://Art/dizzy_star.png" id="18_7fblt"]

[sub_resource type="AtlasTexture" id="AtlasTexture_puh7i"]
atlas = ExtResource("10_gq3d1")
region = Rect2(0, 0, 750, 750)

[sub_resource type="AtlasTexture" id="AtlasTexture_l776r"]
atlas = ExtResource("10_gq3d1")
region = Rect2(0, 1500, 750, 750)

[sub_resource type="AtlasTexture" id="AtlasTexture_lpx34"]
atlas = ExtResource("10_gq3d1")
region = Rect2(0, 750, 750, 750)

[sub_resource type="AtlasTexture" id="AtlasTexture_80s0c"]
atlas = ExtResource("10_gq3d1")
region = Rect2(750, 0, 750, 750)

[sub_resource type="AtlasTexture" id="AtlasTexture_2eu5i"]
atlas = ExtResource("10_gq3d1")
region = Rect2(1500, 0, 750, 750)

[sub_resource type="AtlasTexture" id="AtlasTexture_y2cfo"]
atlas = ExtResource("10_gq3d1")
region = Rect2(750, 1500, 750, 750)

[sub_resource type="AtlasTexture" id="AtlasTexture_4vjfg"]
atlas = ExtResource("10_gq3d1")
region = Rect2(1500, 1500, 750, 750)

[sub_resource type="AtlasTexture" id="AtlasTexture_s1xod"]
atlas = ExtResource("10_gq3d1")
region = Rect2(750, 750, 750, 750)

[sub_resource type="AtlasTexture" id="AtlasTexture_8hgm4"]
atlas = ExtResource("10_gq3d1")
region = Rect2(1500, 750, 750, 750)

[sub_resource type="SpriteFrames" id="SpriteFrames_i5hpq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_puh7i")
}],
"loop": true,
"name": &"idle_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l776r")
}],
"loop": true,
"name": &"idle_side",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lpx34")
}],
"loop": true,
"name": &"idle_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_80s0c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2eu5i")
}],
"loop": true,
"name": &"walk_down",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y2cfo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4vjfg")
}],
"loop": true,
"name": &"walk_side",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s1xod")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8hgm4")
}],
"loop": true,
"name": &"walk_up",
"speed": 4.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ull10"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rxlr7"]

[sub_resource type="Gradient" id="Gradient_eh8w0"]
offsets = PackedFloat32Array(0, 0.995789)
colors = PackedColorArray(1, 1, 1, 1, 0.295867, 0.295867, 0.295867, 0.180392)

[node name="Llama" type="CharacterBody2D" groups=["llamas"]]
scale = Vector2(1.2, 1.2)
collision_layer = 2
collision_mask = 31
motion_mode = 1
platform_on_leave = 2
script = ExtResource("1_7h8ci")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("1_mb2rl")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("2_wgeyf")

[node name="Wander" type="Node" parent="StateMachine"]
script = ExtResource("3_evbmu")

[node name="Flee" type="Node" parent="StateMachine"]
script = ExtResource("4_mqi7g")

[node name="Caught" type="Node" parent="StateMachine"]
script = ExtResource("5_fcvlx")

[node name="Flung" type="Node" parent="StateMachine"]
script = ExtResource("6_16n04")

[node name="Penned" type="Node" parent="StateMachine"]
script = ExtResource("7_luyet")

[node name="ExitPen" type="Node" parent="StateMachine"]
script = ExtResource("9_85bgn")

[node name="Dazed" type="Node" parent="StateMachine"]
script = ExtResource("10_253va")

[node name="VisibleNodes" type="Node2D" parent="."]

[node name="Sprite2D" type="AnimatedSprite2D" parent="VisibleNodes"]
scale = Vector2(0.25, 0.25)
sprite_frames = SubResource("SpriteFrames_i5hpq")
animation = &"walk_side"
autoplay = "walk_up"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.57079
scale = Vector2(5.48858, 2.83169)
shape = SubResource("CapsuleShape2D_ull10")
debug_color = Color(3.44474e-06, 0.610508, 0.712113, 0.42)

[node name="FleeEnterArea" type="Area2D" parent="."]
visible = false
collision_layer = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="FleeEnterArea"]
scale = Vector2(22.5752, 22.5752)
shape = SubResource("CircleShape2D_rxlr7")
debug_color = Color(0.22759, 0.614468, 0.492643, 0.42)

[node name="FleeExitArea" type="Area2D" parent="."]
visible = false
collision_layer = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="FleeExitArea"]
scale = Vector2(30.867, 30.867)
shape = SubResource("CircleShape2D_rxlr7")
debug_color = Color(0.781979, 0.381088, 0.558671, 0.42)

[node name="StateLabel" type="Label" parent="."]
offset_left = -18.0
offset_top = -58.0
offset_right = 22.0
offset_bottom = -35.0

[node name="LlamaProgressBar" parent="." instance=ExtResource("11_v1w6j")]
visible = false
offset_left = -116.667
offset_top = -135.833
offset_right = 183.333
offset_bottom = -105.833

[node name="SpitNoise" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_i5jn6")

[node name="LlamaGrabbedNoise" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_an616")

[node name="LlamaCollisionNoise" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("14_k0qkl")

[node name="LlamaHighPitch" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("15_yvmof")

[node name="LlamaLowPitch" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("16_aeujn")
volume_db = 8.0

[node name="ConfusionEffect" type="CPUParticles2D" parent="."]
position = Vector2(48.3333, -68.3333)
emitting = false
lifetime = 1.5
randomness = 0.26
texture = ExtResource("18_7fblt")
emission_shape = 2
emission_sphere_radius = 13.75
direction = Vector2(2.08165e-12, 2.08165e-12)
gravity = Vector2(2.08165e-12, 2.08165e-12)
initial_velocity_min = 26.82
initial_velocity_max = 99.62
angular_velocity_min = -5.0
angular_velocity_max = 5.0
orbit_velocity_min = -2.0
orbit_velocity_max = 2.0
radial_accel_min = 100.0
radial_accel_max = 100.0
scale_amount_min = 0.5
scale_amount_max = 2.0
color_ramp = SubResource("Gradient_eh8w0")
